<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lyt_cons_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="212dp"
            android:layout_height="212dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/tv_user_Ghool"
            android:src="@drawable/ghool_256"
            app:layout_constraintBottom_toTopOf="@+id/tv_qus_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_qus_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/tv_qus_main"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_newChat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_user" />

        <TextView
            android:id="@+id/btn_newChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_btn_main"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="48dp"
            android:paddingTop="12dp"
            android:paddingEnd="48dp"
            android:paddingBottom="12dp"
            android:text="@string/tv_newDialog"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_qus_main" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/tv_about"
            android:textColor="@color/warm_grey_four"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_view_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_newChat" />

        <View
            android:id="@+id/tv_view_about"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white_three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_about"
            app:layout_constraintStart_toStartOf="@+id/tv_about"
            app:layout_constraintTop_toBottomOf="@+id/tv_about" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:alpha="0.3"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_es_pars"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
